Name:          hArduino
Version:       0.4
Category:      Hardware
Synopsis:      Control your Arduino board from Haskell.
Description:   Control Arduino from Haskell, using the Firmata protocol.
               .
               The hArduino library allows construction of Haskell programs that control
               Arduino boards that are running the (freely available) Firmata program. Note
               that hArduino does /not/ allow you to run arbitrary Haskell code on the
               Arduino! It simply allows you to control a board from Haskell, where you
               can exchange information with the board, send/receive commands from other
               peripherals connected, etc.
               .
               A short (4m29s) video of the blinking example: <http://www.youtube.com/watch?v=PPa3im44t2g>
               .
               hArduino is work-in-progress. Comments, bug-reports, and patches are welcome.
Copyright:     Levent Erkok, 2013
License:       BSD3
License-file:  LICENSE
Stability:     Experimental
Author:        Levent Erkok
Homepage:      http://leventerkok.github.com/hArduino
Bug-reports:   http://github.com/LeventErkok/hArduino/issues
Maintainer:    Levent Erkok (erkokl@gmail.com)
Build-Type:    Simple
Cabal-Version: >= 1.14
Extra-Source-Files: INSTALL, README.md, COPYRIGHT, CHANGES.md

source-repository head
    type:       git
    location:   git://github.com/LeventErkok/hArduino.git

Library
  default-language: Haskell2010
  ghc-options     : -Wall
  Build-depends   : base  >= 4 && < 5, serialport >= 0.4.5, bytestring, mtl, unix, containers, time
  Exposed-modules : System.Hardware.Arduino
                  , System.Hardware.Arduino.Parts
                  , System.Hardware.Arduino.Parts.LCD
                  , System.Hardware.Arduino.Parts.ShiftRegisters
                  , System.Hardware.Arduino.Parts.SevenSegmentCodes
                  , System.Hardware.Arduino.Parts.Servo
                  , System.Hardware.Arduino.SamplePrograms.Analog
                  , System.Hardware.Arduino.SamplePrograms.Blink
                  , System.Hardware.Arduino.SamplePrograms.Button
                  , System.Hardware.Arduino.SamplePrograms.Counter
                  , System.Hardware.Arduino.SamplePrograms.Distance
                  , System.Hardware.Arduino.SamplePrograms.LCD
                  , System.Hardware.Arduino.SamplePrograms.PulseIn
                  , System.Hardware.Arduino.SamplePrograms.PulseOut
                  , System.Hardware.Arduino.SamplePrograms.SevenSegment
                  , System.Hardware.Arduino.SamplePrograms.Servo
  Other-modules   : System.Hardware.Arduino.Comm
                  , System.Hardware.Arduino.Data
                  , System.Hardware.Arduino.Firmata
                  , System.Hardware.Arduino.Protocol
                  , System.Hardware.Arduino.Utils
