Name:          hArduino
Version:       0.8
Category:      Hardware
Synopsis:      Control your Arduino board from Haskell.
Description:   hArduino allows Haskell programs to control Arduino boards (<http://www.arduino.cc>)
               and peripherals, using the Firmata protocol (<http://firmata.org>).
               .
               For details, see: <http://leventerkok.github.com/hArduino>.
Copyright:     Levent Erkok, 2013
License:       BSD3
License-file:  LICENSE
Stability:     Experimental
Author:        Levent Erkok
Homepage:      http://leventerkok.github.com/hArduino
Bug-reports:   http://github.com/LeventErkok/hArduino/issues
Maintainer:    Levent Erkok (erkokl@gmail.com)
Build-Type:    Simple
Cabal-Version: >= 1.14
Extra-Source-Files: INSTALL, README.md, COPYRIGHT, CHANGES.md

source-repository head
    type:       git
    location:   git://github.com/LeventErkok/hArduino.git

Library
  default-language  : Haskell2010
  ghc-options       : -Wall
  Build-depends     : base  >= 4 && < 5, serialport >= 0.4.5, bytestring, mtl, containers, time
  Exposed-modules   : System.Hardware.Arduino
                    , System.Hardware.Arduino.Parts
                    , System.Hardware.Arduino.Parts.LCD
                    , System.Hardware.Arduino.Parts.ShiftRegisters
                    , System.Hardware.Arduino.Parts.SevenSegmentCodes
                    , System.Hardware.Arduino.Parts.Servo
                    , System.Hardware.Arduino.Parts.Piezo
                    , System.Hardware.Arduino.SamplePrograms.Analog
                    , System.Hardware.Arduino.SamplePrograms.Blink
                    , System.Hardware.Arduino.SamplePrograms.Button
                    , System.Hardware.Arduino.SamplePrograms.Counter
                    , System.Hardware.Arduino.SamplePrograms.Distance
                    , System.Hardware.Arduino.SamplePrograms.JingleBells
                    , System.Hardware.Arduino.SamplePrograms.LCD
                    , System.Hardware.Arduino.SamplePrograms.NumGuess
                    , System.Hardware.Arduino.SamplePrograms.Pulse
                    , System.Hardware.Arduino.SamplePrograms.SevenSegment
                    , System.Hardware.Arduino.SamplePrograms.Servo
  Other-modules     : System.Hardware.Arduino.Comm
                    , System.Hardware.Arduino.Data
                    , System.Hardware.Arduino.Firmata
                    , System.Hardware.Arduino.Protocol
                    , System.Hardware.Arduino.Utils
